--- a/admin/style.css
+++ b/admin/style.css
@@ -8,9 +8,19 @@ body {
 }
 
 .slide {
+    width: 194px;
+    height: 110px;
     cursor: pointer;
     float: left;
     margin: 10px;
+    box-sizing: border-box;
+    border: 1px solid #000;
+}
+
+.picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .box {
