Changed thumbnails to be generated on upload instead of on the fly.

--- a/admin/style.css
+++ b/admin/style.css
@@ -17,6 +17,10 @@ body {
     border: 1px solid #000;
 }
 
+.slide a {
+    display: block;
+}
+
 .picture {
     display: block;
     margin-left: auto;
