--- a/admin/style.css
+++ b/admin/style.css
@@ -17,14 +17,22 @@ body {
     border: 1px solid #000;
 }
 
-.slide a {
+.block {
     display: block;
 }
 
-.picture {
-    display: block;
+.show {
+    width: 220px;
+    float: left;
+}
+
+.center {
     margin-left: auto;
     margin-right: auto;
+}
+
+.fade {
+    opacity: 0.3;
 }
 
 .box {
@@ -38,4 +46,12 @@ body {
 
 .end {
     clear: both;
+}
+
+#upload {
+    float: left;
+}
+
+#delete {
+    float: right;
 }
