--- a/admin/style.css
+++ b/admin/style.css
@@ -70,3 +70,11 @@ body {
     background-color: #d00;
     z-index: 100;
 }
+
+.error {
+    position: fixed;
+    top: 8px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #99EE99;
+}
