Added ability to set screen size per screen. Also changed the replacement calls to be more readable

--- a/style.css
+++ b/style.css
@@ -102,3 +102,13 @@ body {
 .button {
     height: 30px;
 }
+
+.sizebox {
+    vertical-align: middle;
+    width: 20%;
+}
+
+.smallbutton {
+    vertical-align: middle;
+    height: 22px;
+}
