--- a/include/list.html
+++ b/include/list.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>¤title</title>
   <body>
+    <div class="sidebar-top">
+      <div class="gray box">
+	<a href="./admin"><img class="center block" src="./images/settings.svg" /></a>
+      </div>
+    </div>
     <div class="box">
       <div class="title">
 	Visningsytor
@@ -12,9 +17,6 @@
       <div class="title">
 	¤shows
       </div>
-    </div>
-    <div class="box right">
-      <a href="./admin">Admin</a>
     </div>
   </body>
 </html>
