--- a/include/list.html
+++ b/include/list.html
@@ -7,7 +7,12 @@
   <body>
     <div class="sidebar-top">
       <div class="gray box">
-	<a href="./admin"><img class="center block" src="./images/settings.svg" /></a>
+	<a href="./admin">
+	  <img class="center block"
+	       src="./images/settings.svg"
+	       alt="Administration"
+	       title="Administration" />
+	</a>
       </div>
     </div>
     <div class="box">
