--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ p {
     margin-bottom: 4.5pt;
 }
 
-input[type="text"] {
+input[type="text"], textarea {
     background-color: #eee;
     border: 0;
     padding: 3pt;
@@ -58,24 +58,23 @@ input[type="text"] {
     opacity: 1.0;
 }
 
-.slideimg {
-    z-index: 1;
+.settingsform .calendar {
+    width: 75pt !important;
 }
 
-.inactive {
-    z-index: 2;
-}
-
-.active {
-    z-index: 3;
-}
-
-.w30 {
+.settingsform input[type='text'] {
     width: 30pt;
 }
 
-.w75 {
-    width: 75pt;
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 25;
+    background-color: #000;
+    opacity: 0.3;
 }
 
 .nowrap {
@@ -164,6 +163,18 @@ input[type="text"] {
     top: -10%;
     min-width: 200pt;
     z-index: 50;
+}
+
+.securityform {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 50;
+}
+
+.securityform textarea {
+    min-width: 150pt;
+    min-height: 400pt;
 }
 
 .show {
