Minor changes to the interface

--- a/include/admin.html
+++ b/include/admin.html
@@ -99,6 +99,9 @@
 	    <textarea title="Om du försöker ta bort dig själv kommer du automatiskt att läggas till igen."
 		      name="userlist">¤allowedusers</textarea>
 	  </p>
+	  <p class="nowrap">
+	    Inloggad som: ¤username
+	  </p>
 	  <div class="divider end"></div>
 	  <img class="tinybutton tinybox right"
 	       src="../images/commit.svg"
