Tweaked the look of the security settings

--- a/include/admin.html
+++ b/include/admin.html
@@ -100,7 +100,8 @@
 		      name="userlist">¤allowedusers</textarea>
 	  </p>
 	  <p class="nowrap">
-	    Inloggad som: ¤username
+	    <span class="smaller">Inloggad som: </span>
+	    <span class="serif">¤username</span>
 	  </p>
 	  <div class="divider end"></div>
 	  <img class="tinybutton tinybox right"
