--- a/include/video.html
+++ b/include/video.html
@@ -1,41 +1,17 @@
 <html>
   <head>
-    <style type="text/css">
-      body {
-      background-color: #000000;
-      padding: 0px;
-      margin: 0px;
-      overflow: hidden;
-      font-size: 0;
-      }
-      .container {
-      height: 100%;
-      text-align: center;
-      white-space: nowrap;
-      }
-      .container:before {
-      content: '';
-      display: inline-block;
-      vertical-align: middle;
-      height: 100%;
-      }
-      img {
-      display: inline-block;
-      vertical-align: middle;
-      }
-      .nocursor {
-      cursor: none;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./slide.css" />
   </head>
   <body>
-    <script type="text/javascript">
-      var timeout = ¤timeout
-    </script>
-    <script type="text/javascript" src="picscript.js">
+    <script type="text/javascript" src="videoscript.js">
     </script>
     <div class="container">
-      <video src="./uploads/¤video">This browser does not support HTML5 video.</video>
+      <video id="content"
+	     src="./uploads/¤video"
+	     onended="window.location.reload(true)"
+	     autoplay>
+	This browser does not support HTML5 video.
+      </video>
     </div>
   </body>
 </html>
