Added a preview to the video

--- a/include/video.html
+++ b/include/video.html
@@ -8,6 +8,7 @@
     <div class="container">
       <video id="content"
 	     src="./uploads/¤video"
+	     poster="./uploads/¤thumb"
 	     onended="window.location.reload(true)"
 	     autoplay>
 	This browser does not support HTML5 video.
