--- a/include/picture.html
+++ b/include/picture.html
@@ -10,7 +10,7 @@
     </script>
     <div class="container">
       <img id="content"
-	   src="./slide.php?show=¤show&name=¤picture" />
+	   src="./slide.php?showid=¤showid&slideid=¤slideid" />
     </div>
   </body>
 </html>
