Initial video support is fully functional

--- a/include/video.html
+++ b/include/video.html
@@ -9,6 +9,8 @@
       <video id="content"
 	     src="./uploads/¤video"
 	     poster="./uploads/¤thumb"
+	     width="¤width"
+	     height="¤height"
 	     onended="window.location.reload(true)"
 	     autoplay>
 	This browser does not support HTML5 video.
