--- a/include/list.html
+++ b/include/list.html
@@ -6,14 +6,12 @@
     <title>¤title</title>
   <body>
     <div class="sidebar-top">
-      <div class="gray box">
-	<a href="./admin">
-	  <img class="center block"
-	       src="./images/settings.svg"
-	       alt="Administration"
-	       title="Administration" />
-	</a>
-      </div>
+      <a class="gray box block"
+	 href="./admin"
+	 title="Administration">
+	<img class="center block"
+	     src="./images/settings.svg" />
+      </a>
     </div>
     <div class="box">
       <div class="title">
