--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ input[type="text"], textarea {
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
 
 .left {
@@ -206,6 +206,26 @@ input[type="text"], textarea {
     border: 1pt solid #CC4444;
     left: 50%;
     transform: translate(-50%);
+}
+
+.feedback {
+    position: fixed;
+    top: 0pt;
+    left: 0pt;
+    width: 100%;
+    height: 100%;
+    z-index: 25;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.feedbox {
+    margin-top: 25pt;
+    width: 200pt;
+    text-align: center;
+}
+
+.feedspin {
+    margin: 15pt;
 }
 
 .calendar {
