--- a/include/picture.html
+++ b/include/picture.html
@@ -8,7 +8,7 @@
     </script>
     <script type="text/javascript" src="picscript.js">
     </script>
-    <div class="container">
+    <div class="container nocursor">
       <img id="content"
 	   src="./slide.php?showid=¤showid&slideid=¤slideid" />
     </div>
