--- a/include/admin.html
+++ b/include/admin.html
@@ -144,7 +144,7 @@
     </div>
   </body>
 </html>
-¤¤
+¤¤ slide
 <div class="slide"
      id="¤slideid"
      draggable="true"
@@ -202,7 +202,7 @@
     </form>
   </div>
 </div>
-¤¤
+¤¤ show
 <div id="¤showid"
      class="show box relative"
      ondragover="return false"
