Fixed a bug preventing videos from playing properly

--- a/include/slide.html
+++ b/include/slide.html
@@ -25,7 +25,7 @@
        poster="./uploads/¤thumb"
        width="¤width"
        height="¤height"
-       onended="getNext()"
+       onended="document.getNext()"
        autoplay>
   This browser does not support HTML5 video.
 </video>
