Added some extra information on each show on the list page

--- a/include/list.html
+++ b/include/list.html
@@ -24,4 +24,6 @@
   </body>
 </html>
 ¤¤ show
-<a href="./?id=¤showid">¤name</a><br/>
+<div class="box">
+  <a href="./?id=¤showid">¤name</a> [¤width x ¤height, ¤timeouts]
+</div>
