Swapped some svg files and standardized format

--- a/include/admin.html
+++ b/include/admin.html
@@ -136,7 +136,7 @@
     </div>
     <div class="feedback hidden">
       <div class="feedbox center box">
-	<img src="../images/spinner.svg" class="feedspin"/>
+	<img src="../images/loading.svg" class="feedspin"/>
 	<p>
 	  Laddar upp, v.g. vänta...
 	</p>
