--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ input[type="text"], textarea {
 
 .feedspin {
     margin: 15pt;
+    animation: spin 2s infinite linear;
 }
 
 .calendar {
@@ -265,4 +266,13 @@ input[type="text"], textarea {
 
 .gray {
     background-color: #eee;
+}
+
+@keyframes spin {
+    0% {
+	transform: rotate(0deg);
+    }
+    100% {
+	transform: rotate(359deg);
+    }
 }
